* rmse_by_num_trees no longer throws warnings
* k_fold_cv now has random splits and the y-hats and p-hats are returned
* jpackage is now used for initializing Java and thus "options(java.parameters = '...')" is used instead of set_bart_machine_memory which has been removed
* vignette and documentation are now revamped

version 1.0.4

* fixed bug in confusion table creation in the pathological case when only one class is observed and predicted
* fixed small bug off-by-one bug in get_sigsqs function (thanks to Jeff Moser)
* Added Java source files to R package build. Declared authors of JARs which this library depends upon.

version 1.0.3

* fixed bug in variable selection via cv where it used to crash if one variable was selected
* bartMachineCV now returns stats for each cross-validation run of hyperparameter sets 

version 1.0.2

* worked around a rJava 0.9.5 issue that surfaces when setting RAM on some new MACs
* Upon initialization of the JVM there is now a message indicating how much maximum memory is available and a warning is thrown if the user attempts to reinitialize the RAM amount.
* Default JVM memory is now 1.1GB which is the maximum which initializes on 32-bit Windows machines
* Automobile data manual update
* Removed unnecessary verbosity during model construction
* Added a convenience alias method for setting memory
* Added a convenience alias method for building bart machines and building cross-validated bart machines
* Bugs fixed in k_fold_cv function
* Bug fixed in handling of missing data in the absence of missing data
* Prediction intervals now technically correct
* During covariance importance test, covariates are all permuted as a block unit to preserve collinearity structure
* Automatic cov_importance_prior construction by downweighting factors by their number of levels
* Added benchmark datasets
* Bugs fixed during specification of Xy dataframe instead of X, y separately
* Bugs fixed when using bartMachineCV on a numeric x